Dexter: Devicetree: Added Galloway PA-0 and PA-1

--- a/bsp_pcw/KERNEL/devicetrees/zx2/dexter-min.dts
+++ b/bsp_pcw/KERNEL/devicetrees/zx2/dexter-min.dts
@@ -192,6 +192,308 @@
 		vref-supply = <&dac_vref>;
 	};
 
+	/* PA-0 */
+	i2c-mux@20 {
+		reg = <0x20>;
+		compatible = "nxp,pca9547";
+		#address-cells = <1>;
+		#size-cells = <0>;
+		i2c@0 {
+			reg = <0>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+			eeprom@21 {
+				compatible = "atmel,24cs02";
+				reg = <0x21>;
+			};
+		};
+		i2c@1 {
+			reg = <1>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+			eeprom@21 {
+				compatible = "atmel,24c32";
+				reg = <0x21>;
+			};
+		};
+		i2c@2 {
+			reg = <2>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+			eeprom@21 {
+				compatible = "atmel,24c02";
+				reg = <0x21>;
+			};
+		};
+		i2c@3 {
+			reg = <3>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+			ad5593r-PA0-1@21 {
+				#size-cells = <0>;
+				#address-cells = <1>;
+				#gpio-cells = <2>;
+				compatible = "adi,ad5593r";
+				reg = <0x21>;
+				gpio-controller;
+				channel@0 {
+					reg = <0>;
+					adi,mode = <8>;
+					adi,off-state = <0>;
+					label = "GPO_EN_BIAS";
+				};
+				channel@1 {
+					reg = <1>;
+					adi,mode = <8>;
+					adi,off-state = <0>;
+					label = "GPO_EN_Drain";
+				};
+				channel@2 {
+					reg = <2>;
+					adi,mode = <1>;
+					adi,off-state = <0>;
+					label = "VTemp";
+				};
+				channel@3 {
+					reg = <3>;
+					adi,mode = <1>;
+					adi,off-state = <0>;
+					label = "IDrain";
+				};
+				channel@4 {
+					reg = <4>;
+					adi,mode = <1>;
+					adi,off-state = <0>;
+					label = "Vdrain";
+				};
+				channel@5 {
+					reg = <5>;
+					adi,mode = <2>;
+					adi,off-state = <0>;
+					label = "PWM_Gate";
+				};
+				channel@6 {
+					reg = <6>;
+					adi,mode = <0>;
+					adi,off-state = <0>;
+				};
+				channel@7 {
+					reg = <7>;
+					adi,mode = <0>;
+					adi,off-state = <0>;
+				};
+			};
+		};
+		i2c@4 {
+			reg = <4>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+			ad5593r-PA0-2@21 {
+				#size-cells = <0>;
+				#address-cells = <1>;
+				#gpio-cells = <2>;
+				compatible = "adi,ad5593r";
+				reg = <0x21>;
+				gpio-controller;
+				channel@0 {
+					reg = <0>;
+					adi,mode = <8>;
+					adi,off-state = <0>;
+					label = "GPO_SEL_FWD_nREF";
+				};
+				channel@1 {
+					reg = <1>;
+					adi,mode = <1>;
+					adi,off-state = <0>;
+					label = "P_FWD";
+				};
+				channel@2 {
+					reg = <2>;
+					adi,mode = <1>;
+					adi,off-state = <0>;
+					label = "P_REV";
+				};
+				channel@3 {
+					reg = <3>;
+					adi,mode = <1>;
+					adi,off-state = <0>;
+					label = "P_VSWR";
+				};
+				channel@4 {
+					reg = <4>;
+					adi,mode = <0>;
+					adi,off-state = <0>;
+				};
+				channel@5 {
+						reg = <5>;
+						adi,mode = <0>;
+						adi,off-state = <0>;
+				};
+				channel@6 {
+					reg = <6>;
+					adi,mode = <0>;
+					adi,off-state = <0>;
+				};
+				channel@7 {
+					reg = <7>;
+					adi,mode = <0>;
+					adi,off-state = <0>;
+				};
+			};
+		};
+	};
+
+	/* PA-1 */
+	i2c-mux@40 {
+		reg = <0x40>;
+		compatible = "nxp,pca9547";
+		#address-cells = <1>;
+		#size-cells = <0>;
+		i2c@0 {
+			reg = <0>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+			eeprom@41 {
+				compatible = "atmel,24cs02";
+				reg = <0x41>;
+			};
+		};
+		i2c@1 {
+			reg = <1>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+			eeprom@41 {
+				compatible = "atmel,24c32";
+				reg = <0x41>;
+			};
+		};
+		i2c@2 {
+			reg = <2>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+			eeprom@41 {
+				compatible = "atmel,24c02";
+				reg = <0x41>;
+			};
+		};
+		i2c@3 {
+			reg = <3>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+			ad5593r-PA1-1@41 {
+				#size-cells = <0>;
+				#address-cells = <1>;
+				#gpio-cells = <2>;
+				compatible = "adi,ad5593r";
+				reg = <0x41>;
+				gpio-controller;
+				channel@0 {
+					reg = <0>;
+					adi,mode = <8>;
+					adi,off-state = <0>;
+					label = "GPO_EN_BIAS";
+				};
+				channel@1 {
+					reg = <1>;
+					adi,mode = <8>;
+					adi,off-state = <0>;
+					label = "GPO_EN_Drain";
+				};
+				channel@2 {
+					reg = <2>;
+					adi,mode = <1>;
+					adi,off-state = <0>;
+					label = "VTemp";
+				};
+				channel@3 {
+					reg = <3>;
+					adi,mode = <1>;
+					adi,off-state = <0>;
+					label = "IDrain";
+				};
+				channel@4 {
+					reg = <4>;
+					adi,mode = <1>;
+					adi,off-state = <0>;
+					label = "Vdrain";
+				};
+				channel@5 {
+					reg = <5>;
+					adi,mode = <2>;
+					adi,off-state = <0>;
+					label = "PWM_Gate";
+				};
+				channel@6 {
+					reg = <6>;
+					adi,mode = <0>;
+					adi,off-state = <0>;
+				};
+				channel@7 {
+					reg = <7>;
+					adi,mode = <0>;
+					adi,off-state = <0>;
+				};
+			};
+		};
+		i2c@4 {
+			reg = <4>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+			ad5593r-PA1-2@41 {
+				#size-cells = <0>;
+				#address-cells = <1>;
+				#gpio-cells = <2>;
+				compatible = "adi,ad5593r";
+				reg = <0x41>;
+				gpio-controller;
+				channel@0 {
+					reg = <0>;
+					adi,mode = <8>;
+					adi,off-state = <0>;
+					label = "GPO_SEL_FWD_nREF";
+				};
+				channel@1 {
+					reg = <1>;
+					adi,mode = <1>;
+					adi,off-state = <0>;
+					label = "P_FWD";
+				};
+				channel@2 {
+					reg = <2>;
+					adi,mode = <1>;
+					adi,off-state = <0>;
+					label = "P_REV";
+				};
+				channel@3 {
+					reg = <3>;
+					adi,mode = <1>;
+					adi,off-state = <0>;
+					label = "P_VSWR";
+				};
+				channel@4 {
+					reg = <4>;
+					adi,mode = <0>;
+					adi,off-state = <0>;
+				};
+				channel@5 {
+						reg = <5>;
+						adi,mode = <0>;
+						adi,off-state = <0>;
+				};
+				channel@6 {
+					reg = <6>;
+					adi,mode = <0>;
+					adi,off-state = <0>;
+				};
+				channel@7 {
+					reg = <7>;
+					adi,mode = <0>;
+					adi,off-state = <0>;
+				};
+			};
+		};
+	};
+
 	eeprom@52 {				// TX Modules Sec.AT24MAC402 EEPROM
 		compatible = "atmel,24c02";
 		reg = <0x52>;
